# Trabalho_EDA2_2026

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/graphs/: bad_reviews_graph.json  good_reviews_graph.json  mid_reviews_graph.json
menu/: common.py
menu/opcao1/: executor.py
menu/opcao2/: executor.py
menu/opcao3/: executor.py
outputs/menu/opcao1/: analise_diferencial.md  resultado_execucao.md
outputs/menu/opcao2/: resultado_execucao.md
outputs/menu/opcao3/: analise_diferencial.md  resultado_execucao.md
outputs/metrics/: pagerank_results.json
outputs/reports/: bfs_semantic_context.md  pagerank_comparison.md
src/analysis/: bfs.py  dfs.py  kcore.py  pagerank.py  pagerank_runner.py  review_quality.py  sankey.py  verify_pagerank.py  visualizacoes.py
src/extraction/: downloader.py  extractor.py
src/graph_construction/: graph_builder.py
src/interface/: console.py  menus.py
src/preprocessing/: processor_manager.py  text_cleaner.py
src/reporting/: html_consolidator.py
