[project]
name = "trabalho-eda2-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "Edupizzol",email = "edupizzol16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "kaggle (>=2.2.1,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "click (>=8.4.1,<9.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
