[project]
name = "trabalho-eda2-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "Edupizzol",email = "edupizzol16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "kaggle (>=2.2.1,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "click (>=8.4.1,<9.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "tqdm (>=4.67.0,<5.0.0)",
    "pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl",
    "rich (>=15.0.0,<16.0.0)",
    "questionary (>=2.1.1,<3.0.0)"
]


[tool.poetry]
packages = [
    {include = "analysis", from = "src"},
    {include = "extraction", from = "src"},
    {include = "graph_construction", from = "src"},
    {include = "graph_definition", from = "src"},
    {include = "interface", from = "src"},
    {include = "preprocessing", from = "src"},
    {include = "utils", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
